2009-01-21  John W. Eaton  <jwe@octave.org>

	* THANKS, Announce: Remove obsolete files.
	* octMakefile.in (DISTFILES): Remove THANKS from the list.

2009-01-20  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for fstat.

2008-12-23  David Bateman  <dbateman@free.fr>

	* configure.in: Add configuration test for ARPACK. 
	* Makeconf.in (ARPACK_LIBS): Add variable with location of ARPACK
	library.
	* NEWS: Document that eigs and svds were moved to Octaave.

2008-10-29  Jaroslav Hajek  <highegg@gmail.com>

	* configure.in: Remove the OCTAVE_LOCAL_BUFFER stuff (moved to
	liboctave).

2008-12-04  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Document more new features.

2008-12-03  John W. Eaton  <jwe@octave.org>

	* config.guess, config.sub: Update from FSF sources.

2008-11-18  John W. Eaton  <jwe@octave.org>

	* mkoctfile.cc.in, octave-bug.cc.in: Style fixes.

2008-11-13  Ben Abbott <bpabbott@mac.com>

	* src/graphics.h.in: Add props screensize & screenpixelsperinch.

2008-11-08  Thorsten Meyer  <thorsten.meyier@gmx.de>

        * Makeconf.in: export PERL variable for use in scripts/mkdoc
        
2008-10-30  David Bateman  <dbateman@free.fr>

	* NEWS: Minor update to document improved indexing code.

2008-10-23  Jason Riedy  <jason@acm.org>

	* configure.in: Take care to use FT2_CFLAGS when checking
	for FTGL headers.

2008-10-22  David Bateman  <dbateman@free.fr>

	* examples/@polynomial: Move examples/polynomial here.
	* examples/@polynomial/Makefile.in: Update for new location.
	* examples/Makefile.in: Ditto.
	* configure.in: Change locate of examples/@polynomial makefile
	in AC_CONFIG_FILES.
	
2008-10-16  David Bateman  <dbateman@free.fr>

	* NEWS: Minor update.

2008-10-15  David Bateman  <dbateman@free.fr>

	* examples/polynomial/display.m, examples/polynomial/double.m,
	examples/polynomial/end.m, examples/polynomial/get.m,
	examples/polynomial/mtimes.m, examples/polynomial/plot.m,
	examples/polynomial/polynomial.m,